--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
     "maintained node versions"
   ],
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "@11ty/eleventy-img": "^0.9.0",
+    "@11ty/eleventy": "^3.1.2",
+    "@11ty/eleventy-img": "^6.0.4",
     "autoprefixer": "^10.2.6",
-    "eleventy-plugin-error-overlay": "^0.1.2",
+    "eleventy-plugin-error-overlay": "^1.0.0",
     "eleventy-plugin-svg-contents": "^0.7.0",
     "glob": "^7.1.7",
     "glob-all": "^3.2.1",
-    "html-minifier": "^4.0.0",
     "luxon": "^1.27.0",
     "markdown-it": "^12.0.6",
     "markdown-it-bracketed-spans": "^1.0.1",
@@ -45,6 +44,6 @@
     "postcss-nesting": "^8.0.1",
     "rimraf": "^3.0.2",
     "tailwindcss": "^2.2.4",
-    "tailwindcss-text-fill-stroke": "^1.1.2"
+    "tailwindcss-text-fill-stroke": "^2.0.0-beta.3"
   }
 }
